# fastapi-cookiecutter

./: README.md  cookiecutter.json  dotenv
{{cookiecutter.project_name}}/: .gitignore  pyproject.toml
{{cookiecutter.project_name}}/app/: main.py
{{cookiecutter.project_name}}/app/api/: deps.py
{{cookiecutter.project_name}}/app/api/{{cookiecutter.api_version}}/: api.py
{{cookiecutter.project_name}}/app/core/: config.py  exceptions.py
{{cookiecutter.project_name}}/app/crud/: __init__.py  base.py  exceptions.py
{{cookiecutter.project_name}}/app/db/: base.py
{{cookiecutter.project_name}}/app/loggings/: __init__.py
{{cookiecutter.project_name}}/app/models/: user.py
